--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,10 @@ dependencies {
     // Dependencies
     implementation include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-    modImplementation "maven.modrinth:spell-power:${project.spell_power_version}-fabric"
+    modImplementation "maven.modrinth:spell-power:${project.spell_power_version}"
+//    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
     modImplementation "maven.modrinth:projectile-damage-attribute:${project.projectile_damage_version}-fabric"
     modImplementation "dev.emi:trinkets:${project.trinkets_version}"
-    modImplementation "maven.modrinth:combat-roll:${project.combat_roll_version}-fabric"
     include(modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}"))
 }
 
