--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,15 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     // Dependencies
+    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:${project.mixin_extras_version}")))
     implementation include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-    modImplementation "maven.modrinth:spell-power:${project.spell_power_version}"
-//    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
-    modImplementation "maven.modrinth:projectile-damage-attribute:${project.projectile_damage_version}-fabric"
+
+//    modImplementation "maven.modrinth:spell-power:${project.spell_power_version}"
+    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
+    // modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}"))
+    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
+
     modImplementation "dev.emi:trinkets:${project.trinkets_version}"
     include(modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}"))
 }
@@ -126,7 +130,7 @@ if(project.hasProperty('release_type')) {
                 requiredDependency 'fabric-api'
                 requiredDependency 'trinkets'
                 requiredDependency 'spell-power'
-                requiredDependency 'projectile-damage-attribute'
+                requiredDependency 'ranged_weapon_api'
                 requiredDependency 'structure-pool-api'
             }
 
@@ -156,7 +160,7 @@ if(project.hasProperty('release_type')) {
             required.project "fabric-api"
             required.project "trinkets"
             required.project "spell-power"
-            required.project "projectile-damage-attribute"
+            required.project "ranged_weapon_api"
             required.project 'structure-pool-api'
         }
     }
