--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,10 @@ maven_group=net
 archives_base_name=Jewelry
 
 # Dependencies
+mixin_extras_version=0.2.0
 tiny_config_version=2.3.2
 fabric_api_version=0.87.0+1.20.1
-projectile_damage_version=3.2.2+1.20.1
+ranged_weapon_api_version=1.1.0+1.20.1
 spell_power_version=0.10.0+1.20.1
 trinkets_version=3.7.0
 structure_pool_api_version=1.0+1.20.1
