--- a/build.gradle
+++ b/build.gradle
@@ -35,13 +35,13 @@ dependencies {
     implementation include("com.github.ZsoltMolnarrr:TinyConfig:${project.tiny_config_version}")
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
 
-    modImplementation "maven.modrinth:spell-power:${project.spell_power_version}"
+    modImplementation("maven.modrinth:spell-power:${project.spell_power_version}")
     modImplementation("maven.modrinth:ranged-weapon-api:${project.ranged_weapon_api_version}")
 //    modImplementation(files("run/mods/dev/spell_power-${project.spell_power_version}.jar"))
 //    modImplementation(files("run/mods/dev/ranged_weapon_api-${project.ranged_weapon_api_version}.jar"))
 
     modImplementation "dev.emi:trinkets:${project.trinkets_version}"
-    include(modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}"))
+    modImplementation("maven.modrinth:structure-pool-api:${project.structure_pool_api_version}")
 }
 
 processResources {
