--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,10 @@ fabric_loader_version=0.16.3
 fabric_api_version=0.103.0+1.21.1
 
 # Mod Properties
-mod_version=2.0.0
+mod_version=2.0.1
 maven_group=net
 archives_base_name=Jewelry
+minecraft_compat_version=1.21
 
 # Dependencies
 tiny_config_version=2.3.2
